--- a/Xambo.CV.tex
+++ b/Xambo.CV.tex
@@ -158,7 +158,7 @@ Dissertation: \emph{Interfaces for Sketching Musical Compositions}.\\
 \section*{Teaching Education}
 \noindent
 \years{2020}\textsc{Research Supervision}. Instructors: Sally Ruane (module 1), Deborah Cartmell (module 2), Meera Warrier (module 3). DMU. Leicester, UK.\\
-\years{2018--2019}\textsc{Learning and Teaching in Higher Education} (with certificate). Instructors: Emma Kennedy (module 1), Alison Gilmour (module 2), Maren Thom (module 2). QMUL. London.\\
+\years{2018--2019}\textsc{Learning and Teaching in Higher Education} (with certificate). Instructors: Emma Kennedy (module 1), Alison Gilmour (module 2), Maren Thom (module 2). Queen Mary University of London (QMUL). London.\\
 \years{2018}\textsc{Women into Leadership}. Instructor: Lorraine Smith. QMUL. London.\\
 \years{2017}\textsc{Communication Skills for Teaching for International Faculty, Postdocs, and Visiting Scholars} (with certificate). Instructor: Katherine Samford. Georgia Institute of Technology (Georgia Tech). Atlanta, GA, USA.
 
@@ -166,11 +166,11 @@ Dissertation: \emph{Interfaces for Sketching Musical Compositions}.\\
 \section*{Employment}
 \noindent
 \years{01/2020--present}\textsc{Senior Lecturer in Music and Audio Technology}. Leicester Media School, Faculty of Computing, Engineering and Media, DMU. \\
-\years{08/2018--12/2019}\textsc{Associate Professor in Music Technology}. Department of Music, NTNU. \\
-\years{08/2018--01/2019}\textsc{Visiting Lecturer}. C4DM, School of Electronic Engineering and Computer Science (EECS), Queen Mary University of London (QMUL). \\
+\years{08/2018--12/2019}\textsc{Associate Professor in Music Technology}. Department of Music, Norwegian University of Science and Technology (NTNU). \\
+\years{08/2018--01/2019}\textsc{Visiting Lecturer}. C4DM, School of Electronic Engineering and Computer Science (EECS), QMUL. \\
 \years{10/2017--07/2018}\textsc{Postdoctoral Research Assistant}. C4DM, School of EECS, QMUL. \\
 \years{07/2015--09/2017}\textsc{Postdoctoral Fellow}. Center for Music Technology (GTCMT) | Digital Media Program, Georgia Tech. \\
-\years{08/2013--09/2014}\textsc{Research Fellow}. London Knowledge Lab, UCL Institute of Education. London. \\
+\years{08/2013--09/2014}\textsc{Research Fellow}. London Knowledge Lab, University College London (UCL) Institute of Education. London. \\
 %{\small Qualitative data collection and analysis (6 sites), development of research tools and processes, dissemination activities and paper writing of results.}\\
 \years{02/2004--06/2010}\textsc{Co-Founder, Project Manager, Web Designer \& Web Developer}. Nodular Soft. Barcelona. \\
 %{\small Freelance studio focused on user-centric software and AV communication, development of community websites using several CMS, development of AV programs under specific needs, and usability consultancy.} \\
@@ -198,8 +198,8 @@ Dissertation: \emph{Interfaces for Sketching Musical Compositions}.\\
 %\years{2018--2019} \textsc{3-year Startup Grant (Startpakke)} (250,000 kr, approx. 25,000 \euro), awarded to women in permanent academic positions in a scientific field with underrepresentation of women. NTNU, Trondheim, Norway.\\
 \years{2017} NCWIT Engagement Excellence Award (\$5,000 cash award) to Greg Hendler, Léa Ikkache, Brandon Westergaard, Anna Xambó, Doug Edwards, Brian Magerko, and Jason Freeman (Earsketch), Georgia Tech.\\
 \years{2016}\textsc{Women in Music Information Retrieval (WiMIR) grant}, awarded a conference fee waiver to attend the ISMIR 2016 conference. New York University (NYU), New York.\\
-\years{10/2010--07/2013}\textsc{3-year Fully-Funded Full-Time OU PhD scholarship}. The Open University, Milton Keynes, UK.\\
-\years{03/2010--06/2010}\textsc{4-month Fully-Funded OU Visiting Research Studentship}. The Open University, Milton Keynes, UK.
+\years{10/2010--07/2013}\textsc{3-year Fully-Funded Full-Time OU PhD scholarship}. OU, Milton Keynes, UK.\\
+\years{03/2010--06/2010}\textsc{4-month Fully-Funded OU Visiting Research Studentship}. OU, Milton Keynes, UK.
 
 \subsection*{Artistic Honors \& Awards}
 \years{05/2004}\textsc{First prize award Minima Festival}. Gandía, Spain. \\
@@ -216,7 +216,7 @@ Role: Creator \& Director.
 \years{09/2023--08/2025}\textsc{AHRC Early Career Research Grant (AH/X011585/1)} \\
 Funding body: AHRC. \\
 Project: "Sensing the Forest - Let the Forest Speak using the Internet of Things, Acoustic Ecology and Creative AI".\\
-Role: Lead Researcher/Coordinator. \\
+Role: PI. \\
 Total Pound Amount: \pounds250,000 \\
 
 
@@ -238,7 +238,7 @@ Project: ``MIRLCAuto: A Virtual Agent for Music Information Retrieval in Live Co
 Role: PI. \\
 Partners: Music, Technology and Innovation - Institute for Sonic Creativity (MTI$^2$), De Montfort University; Leicester Hackspace; IKLECTIK; Phonos; l’ull cec. \\
 Collaborators: TOPLAP Barcelona, FluCoMa, Freesound.\\
-Total Pound Amount: \pounds10,000 \\[.2cm]
+Total Pound Amount: \pounds10,000 \\%[.2cm]
 
 \years{08/2018-12/2019}\textsc{Start-up Package (Startpakke)} \\
 Funding body: NTNU. \\
@@ -342,7 +342,7 @@ Total Euro Amount: \euro3,000
 \subsection*{Peer-Reviewed Books / Edited Books, Journal Special Issues, and Proceedings}
 \noindent
 
-\years{2023}\textbf{Xambó, A.}, Roma, G., Magnusson, T. (eds.) (Forthcoming). Live Coding Sonic Creativities. \emph{Organised Sound}, 28(2).\\
+\years{2023}\textbf{Xambó, A.}, Roma, G., Magnusson, T. (eds.) (2023). Live Coding Sonic Creativities. \emph{Organised Sound}, 28(2).\\
 \years{2020b}\textbf{Xambó, A.},  Martín, S. R., Roma, G. (eds.) (2020). JAES Special Issue on Web Audio. \emph{Journal of Audio Engineering Society}, 68(10).\\
 \years{2020a}\textbf{Xambó, A.},  Martín, S. R., Roma, G. (eds.) (2019). \emph{Proceedings of the International Web Audio Conference}. NTNU. ISSN: 2663-5844.\\
 \years{2019}Queiroz, M. \textbf{Xambó, A.} (eds.) (2019). \emph{Proceedings of the International Conference on New Interfaces for Musical Expression}. UFRGS. ISSN 2220-4806.\\
@@ -358,7 +358,7 @@ Total Euro Amount: \euro3,000
 
 \subsection*{Peer-Reviewed Journal Articles}
 \noindent
-\years{2023}\textbf{Xambó, A.} (In Press). Discovering Creative Commons Sounds in Live Coding. \emph{Organised Sound}, 28(2).\\
+\years{2023}\textbf{Xambó, A.} (2023). Discovering Creative Commons Sounds in Live Coding. \emph{Organised Sound}, 28(2).\\
 {\years{2022}\textbf{Xambó, A.} (2022) ``Virtual Agents in Live Coding: A Review of past, present and future directions''. \emph{e-Contact!}, 21.1. Online journal.\\
 {\years{2021}Roma, G., \textbf{Xambó, A.}, Green, O., Tremblay, P.A. (2021) ``A General Framework for Visualization of Sound Collections in Musical Interfaces''. \emph{Applied Sciences}. 11(24):11926.\\
 {\years{2020}\textbf{Xambó, A.}, Støckert, R., Jensenius, A.R. and Saue, S. ``Learning to Code Through Web Audio: A Team-Based Learning Approach''. \emph{Journal of Audio Engineering Society}, 68(10), pp. 727--737. \emph{Special Issue on Web Audio}.}\\
@@ -454,7 +454,8 @@ Brandtsegg, Ø., \textbf{Xambó, A.}, Engum, T., Bergsland, A., Waadeland, C.H. 
 \subsection*{External}
 \noindent
 
-\years{2023b} \textsc{Invited Talk/Workshop} (June 7, 2023). "About NIMEs, NIMEing and Speculative Futures". \emph{Creative Technologies II}. Creative Technologies Master's Program, Film Universität Babelsberg Konrad Wolf, Potsdam, Germany.\\ 
+\years{2023c} \textsc{Keynote Speaker} (November 14, 2023). " From NIME to NISE: Rethinking the design and evaluation of musical interfaces". \emph{Audio Developer Conference 2023 (ADC23)}. London, UK.\\ 
+\years{2023b} \textsc{Invited Talk/Workshop (online)} (June 7, 2023). "About NIMEs, NIMEing and Speculative Futures". \emph{Creative Technologies II}. Creative Technologies Master's Program, Film Universität Babelsberg Konrad Wolf, Potsdam, Germany.\\ 
 \years{2023a} \textsc{Invited Talk/Workshop} (March 3, 2023). "About NIMEs, NIMEing and Speculative Futures". \emph{Introduction to Making Digital Music Instruments
 }. LEADD:NG, University of Nottingham, Nottingham, UK.\\ 
 \years{2022g} \textsc{Panel Member (online)} (December 13, 2022). "Music creation" with Rob Clouth (music creator), Marcelo Estrella (lawyer - Across Legal), Antonia Folguera (curator - SONAR), Anna Xambó (researcher and music creator - Institute of Sonic Creativity, DeMontfort University). Moderated by Sergi Jordà and Karma Peiró. \emph{Challenges and Opportunities in Music Tech - Open Debate}. Universitat Pompeu Fabra, Barcelona, Spain / online.\\ 
@@ -558,7 +559,7 @@ Practices of Music; New Technologies, Instruments and Agents}. Oodi, Helsinki, F
 \years{2012} \textsc{Demo Presenter}. (January 10, 2012). "Tangible Additive Sound Synthesis (TASS)". \emph{Welcome to the French Embassy}, OU. Milton Keynes, UK.\\
 \years{2011d} \textsc{Poster Presenter}. (June 17, 2011). “Designing and Evaluating Interactive Systems: Musical Tabletops for Collective Music Performance". \emph{CRC PhD Student Conference 2011}, OU. Milton Keynes, UK.\\
 \years{2011c} \textsc{Poster \& Demo Presenter} together with Milne, A. J. (May 30, 2011). “Hex Player — A Virtual Musical Controller". \emph{NIME '11}. Oslo, Norway.\\
-\years{2011b} \textsc{Poster Presenter}. (March 8, 2011). “Designing and Evaluating Interactive Systems: Musical Tabletops for Collective Music Performance". \emph{The Open University Poster Competition 2011}. Milton Keynes, UK.\\
+\years{2011b} \textsc{Poster Presenter}. (March 8, 2011). “Designing and Evaluating Interactive Systems: Musical Tabletops for Collective Music Performance". \emph{OU Poster Competition 2011}. Milton Keynes, UK.\\
 \years{2011a} \textsc{Poster Presenter}. (January 25, 2011) “TOUCHtr4ck: Democratic Collaborative Music". \emph{TEI '11}. Funchal, Madeira.\\
 \years{2010b} \textsc{Poster Presenter}. (December 21, 2010). Xambó, A., Laney, R., Dobbyn, C., Jordà, S. “Multi-touch Interaction Techniques for Collaborative Music Activities". \emph{DMRN+5: Digital Music Research Network One-day Workshop 2010}, Queen Mary, University of London. London.\\
 \years{2010a} \textsc{Poster Presenter}. (June 8, 2010). “Issues and Techniques for Collaborative Music Making on Multi-touch Surfaces". \emph{CRC PhD Student Conference 2010}, OU. Milton Keynes, UK.\\
@@ -570,7 +571,8 @@ Practices of Music; New Technologies, Instruments and Agents}. Oodi, Helsinki, F
 \noindent
 
 \years{2023} \textbf{Xambó, A.} (March 3, 2023). "Situatedness meets live coding: A NIME approach". \textsc{Invited Talk / Workshop}. \emph{Introduction to Making Digital Music Instruments}. LEADD:NG, University of Nottingham, Nottingham, UK.\\ 
-\years{2022} \textbf{Xambó, A.} (December 8, 2022). "Machine listening and machine learning using MIRLC/a". \textsc{Invited Talk/Workshop}. \emph{Computer Programming for Musicians}. Department of Performing Arts, School of Communication and Creativity, City, University of London, UK.\\ 
+\years{2022b} \textbf{Xambó, A.} (December 8, 2022). "Machine listening and machine learning using MIRLC/a". \textsc{Invited Talk/Workshop}. \emph{Computer Programming for Musicians}. Department of Performing Arts, School of Communication and Creativity, City, University of London, UK.\\ 
+\years{2022a}(January 29-30, 2022). "Live taming free sounds" in collaboration with Iván Paz. On-the-Fly Live Coding Hacklab. European Union's "Creative Europe" program. ZKM, Karlsruhe, Germany.\\
 \years{2021d}Pardue, L., Martínez, J., \textbf{Xambó, A.}, Cavdir, D., Almeida, I. and Bin, A. (June 14, 2021). “Actions We Can Take to Improve Diversity and Inclusivity at NIME". Online workshop. \emph{NIME '21}, Shanghai, China.\\
 \years{2021c}\textbf{Xambó, A.}, Roig, S. (January 25/27/29, 2021). “Performing With a Virtual Agent: Machine Learning for Live Coding". Online workshop. \emph{Leicester Hackspace}, Leicester, UK.\\
 \years{2021b}Pardue, L., Martínez, J. and \textbf{Xambó, A.} (January 14, 2021). “NIME Diversity Workshop". Online workshop.\\
@@ -735,6 +737,8 @@ Collaborator: Gerard Roma.
 \subsection*{Code}
 \noindent
 
+\years{2023--present}Sensing the Forest: \href{https://github.com/axambo/sensingtheforest}{github.com/sensingtheforest}.\\
+Role: Concept and implementation.\\
 \years{2022--present}personic: \href{https://github.com/axambo/personic}{github.com/axambo/personic}.\\
 Role: Concept and implementation.\\
 \years{2020--present}MIRLCa: \href{https://github.com/mirlca/code}{github.com/mirlca/code}.\\
@@ -822,10 +826,10 @@ Role: Creation of syllabus, creation of content, instruction and assessment.
 \subsection*{Undergraduate Courses}
 \noindent
 
-\years{05/2023--06/2023}Course: \emph{MTEC1005\_2223\_604 Music Industry Practice} (42 h). \# Students: $\sim$15--20. \\
+\years{05/2023--06/2023}Course: \emph{MTEC1005\_2223 Music Industry Practice} (42 h). \# Students: $\sim$15--20. \\
 De Montfort University, Leicester, UK.\\ 
 Role: Course leader, creation of content for lectures, instruction and assessment.\\
-\years{02/2023--03/2023}Course: \emph{MTEC1003\_2223\_603 Sound Analysis \& Synthesis} (14 h). \# Students: $\sim$35--40. \\
+\years{02/2023--03/2023}Course: \emph{MTEC1003\_2223 Sound Analysis \& Synthesis} (14 h). \# Students: $\sim$35--40. \\
 De Montfort University, Leicester, UK.\\ 
 Role: Course leader, creation of content for lectures, instruction and assessment.\\
 \years{01/2023--04/2023}Course: \emph{MATD2029 Digital Audio Electronics: Sensors \& Interfaces} (30 h). \# Students: $\sim$10. \\
@@ -885,7 +889,7 @@ Role: Creation of syllabus, creation of content, instruction and assessment.\\
 \years{11/1999--06/2003}
 Course: \emph{Computer Animation} (90 h). \# Students: $\sim$15. \\ 
 Media Art Institute Fak d'Art, Barcelona.\\ 
-Role: Creation of syllabus, creation of content, instruction and assessment.\\
+Role: Creation of syllabus, creation of content, instruction and assessment.
 
 \subsection*{Professional Courses}
 \noindent
@@ -933,7 +937,7 @@ Role: Co-creation of syllabus, creation of content, instruction and assessment.\
 \years{03/2004--05/2004}
 Course: \emph{Crossmedia infantil} (12 h). \# Students (3--4 years old): $\sim$8.\\
 Escola Glòries, Barcelona.\\
-Role: Co-creation of syllabus, creation of content, instruction and assessment.\\ [1.3cm]%hack
+Role: Co-creation of syllabus, creation of content, instruction and assessment.%\\ [1.3cm]%hack
 
 \section*{Supervision}
 %\noindent
@@ -951,11 +955,12 @@ Role: Co-creation of syllabus, creation of content, instruction and assessment.\
 \years{09/2015--05/2017}Co-advisor of Pratik Shah (master student in Human-Centered Computing, School of Interactive Computing) with the research and design on adding collaborative features to EarSketch, an online platform for learning code by making music. This work has been part of the design and development of the NSF-funded project EarSketch, led by Jason Freeman. From this work, we have published at the conferences ICLI '16 and AM '17, and also at the AES journal in 2018 (see Peer-Reviewed Conference Papers).
 
 \subsection*{Undergraduate Students}
-\years{09/2021--06/2022}Supervision of two L6 undergraduate students in music technology for their \emph{MATT3000 Research Project}: Abbey Young's  ``A Practice-based Analysis of Practical Workshops to Improve Gender Equality in Music Technology Education in the UK'' and Tolu Ikuyinminu's ``Investigating the Positive and Negative Impacts of the `UK Drill' Genre on Generation Z''. 
+\years{09/2022--06/2023}Supervision of two L6 undergraduate students in music technology for their \emph{MATT3000 Research Project}: Leon Riley's  ``Leicester-verb: Acoustic footprints of Leicester spaces for creative reverb purposes'' (Technical Research Project) and Ambrose Jnr Nwodoh's ``The `Cocktail Party Effect' -- Exploring selective attention through Auditory Scene Analysis''. DMU. \\
+\years{09/2021--06/2022}Supervision of two L6 undergraduate students in music technology for their \emph{MATT3000 Research Project}: Abbey Young's  ``A Practice-based Analysis of Practical Workshops to Improve Gender Equality in Music Technology Education in the UK'' and Tolu Ikuyinminu's ``Investigating the Positive and Negative Impacts of the `UK Drill' Genre on Generation Z''. DMU.
 
 \section*{Mentoring}
 \years{08/2018--12/2019}Mentor and advisor of the members of the organization \emph{WoNoMute}, including the co-chair and research assistant Karolina Jawad, and the research assistants Mari Lesteberg and Ane Bjerkan.\\
-\years{05/2016--12/2017}Mentor and advisor of the members of the student-led organization \emph{Women in Music Tech}, including the chair of the organization, Léa Ikkache, the editor-in-chief of the newsletter Amruta Vidwans, and other organization members, such as Jyoti Narang.
+\years{05/2016--12/2017}Mentor and advisor of the members of the co-founded student-led organization \emph{Women in Music Tech}, including the chair of the organization, Léa Ikkache, the editor-in-chief of the newsletter Amruta Vidwans, and other organization members, such as Jyoti Narang.
  
 \section*{Assessment}
 \noindent
@@ -1079,6 +1084,7 @@ Role: Co-creation of syllabus, creation of content, instruction and assessment.\
 
 \years{2023b}\emph{International Symposium on Computer Music Multidisciplinary Research} (2023).\\ 
 \years{2023a}\emph{International Conference on Live Coding (ICLC)} (2023).\\
+\years{2022}\emph{Music Heritage Knowledge Graphs (MHKG) (2022).}\\
 \years{2020b}\emph{Workshop on the Internet of Sounds} (2020).\\ 
 \years{2020a}\emph{Network Music Festival} (2020).\\
 \years{2019b}\emph{Workshop on Ubiquitous Music} (2020).\\
@@ -1097,11 +1103,12 @@ Role: Co-creation of syllabus, creation of content, instruction and assessment.\
 \years{2013c}\emph{IEEE Interactive Tabletops and Surfaces} (2013).\\
 \years{2012--2018}\emph{ACM Designing Interactive Systems} (2012, 2016, 2018).\\
 \years{2012--2018}\emph{ACM Tangible, Embedded and Embodied Interaction (TEI)} (2012--2018).\\
-\years{2011--2018}\emph{New Interfaces for Musical Expression (NIME)} (2011--2018).\\
+\years{2011--2018}\emph{New Interfaces for Musical Expression (NIME)} (2011--2018).
 
 \subsection*{Journal Reviewer}
 \noindent
 
+\years{2023}\emph{Digital Creativity}. Routledge.\\
 \years{2022}\emph{Personal and Ubiquitous Computing}. Springer.\\
 \years{2019b}\emph{Computer Music Journal}. MIT Press Journals (2019--2020, 2023).\\
 \years{2019a}\emph{Arts}. MDPI.\\
@@ -1131,7 +1138,7 @@ Role: Co-creation of syllabus, creation of content, instruction and assessment.\
 \noindent
 
 \years{2022}(January 29-30, 2022) On-the-Fly Live Coding Hacklab. European Union's "Creative Europe" program. Mentor of live coding and machine learning. ZKM, Karlsruhe, Germany.\\
-\years{2018}(July 4, 2018) Wallifornia MusicTech Hackathon. Liège, Belgium.
+\years{2018}(July 4, 2018) Wallifornia MusicTech Hackathon. Liège, Belgium.\\
 
 \subsection*{Jury Member}
 \noindent
@@ -1140,7 +1147,7 @@ Role: Co-creation of syllabus, creation of content, instruction and assessment.\
 \years{2020}\emph{Pamela Z Award for Innovation (NIME '20)}, Royal Birmingham Conservatoire, Birmingham, UK.\\
 \years{2019}\emph{Pamela Z Award for Innovation (NIME '19)}, UFRGS, Porto Alegre, Brazil.\\
 \years{2018}\emph{COLLAB2018}, Institute of Electronic Music and Acoustics (IEM), University of Music and Performing Arts. Graz, Austria.\\
-\years{2016}\emph{MOOG Hackathon 2016}, GTCMT, Georgia Tech. Atlanta, GA, USA.\\
+\years{2016}\emph{MOOG Hackathon 2016}, GTCMT, Georgia Tech. Atlanta, GA, USA.
 
 \subsection*{Music Judge}
 \noindent
@@ -1197,10 +1204,11 @@ Scientific Apps: MATLAB, Octave, R, SPSS.\\
 Version Control Systems: CVS, Git, Subversion.\\
 Music \& Audio Apps: DAWs (Ableton, Cubase, Live, Logic Pro, Reaper), Max/MSP, PureData, SuperCollider, wave editors (Audacity, SoundForge, WaveEditor), audio analysis (Audition, Sonic Visualiser, SPEAR), audio measurement \& test (Lindos).\\
 Text \& Multimedia Analysis Apps: ELAN, MAXQDA, NVivo, VCode.\\
-Other Apps: Graphics and multimedia authoring apps (AfterEffects, Blender, Dreamweaver, Final Cut Pro, Flash, Freehand, Illustrator, InDesign, Photoshop, Premiere, Processing, Combustion, 3DMax), LaTeX, MS Office suite. CMS (Drupal, WordPress). Static site generators (Jekyll, 11ty). Code editors (Atom, Visual Studio Code).\\
+Other Apps: Graphics and multimedia authoring apps (AfterEffects, Blender, Dreamweaver, Final Cut Pro, Flash, Freehand, Illustrator, InDesign, Photoshop, Premiere, Processing, Combustion, 3DMax), LaTeX, MS Office suite. CMS (Drupal, WordPress). Static site generators (Jekyll, 11ty). Code editors (Atom, Sublime, Visual Studio Code).\\
 Online Learning Platforms: Blackboard, Canvas, Teams.\\
 Hardware: Arduino, Bela, Lindos, micro:bit, Raspberry Pi.\\
-Circuit simulators: Fritzing, OrCAD, Tinkercad.
+Circuit simulators: Fritzing, OrCAD, Tinkercad.\\
+Management: MS Project, Trello.
 
 %\vspace{1cm}
 \vfill{}
