--- a/Xambo.brief.CV.tex
+++ b/Xambo.brief.CV.tex
@@ -109,7 +109,7 @@ I have been working for 10 years (2000--10) as interaction designer, web designe
 
 {\textbf{Grants/Awards/Accolades}} from AHRC (2023--25); DMU Living in a Digital Society Spotlight (2022); DMU Future Research Leaders Programme (2021-22); HDI/EPSRC (2020--21); NTNU (2019, 2018--20); Sonic Arts Research Center (2018); NCWIT (2017); NSF AISL (2016); WiMIR (2016); OU (2010--13, 2010); Fund. Caixa de Sabadell (2003--04); and Generalitat de Catalunya (1998--99, 2001--02).\\
 
-{\textbf{Peer-Reviewed Journal Publications}} in Organised Sound (2023); MDPI (2021); Computer Music Journal (2019); Journal of Audio Engineering Society (2018, 2020); Interacting with Computers (2017); International Journal of Social Research Methodology, (2017); Qualitative Research (2017); ACM Transactions on Computer-Human Interaction (2013); and Information Processing \& Management (2013).\\
+{\textbf{Peer-Reviewed Journal Publications}} in Organised Sound (2023); MDPI (2021); Computer Music Journal (2019); Journal of Audio Engineering Society (2018, 2020); Interacting with Computers (2017); International Journal of Social Research Methodology (2017); Qualitative Research (2017); ACM Transactions on Computer-Human Interaction (2013); and Information Processing \& Management (2013).\\
 
 {\textbf{Conference and Festival Participation}} at New Interfaces for Musical Expression (NIME) (2008, 2011, 2014, 2017--22); Web Audio Conference (WAC) (2017--22); Audio Mostly (2010, 2017--18); Tangible, Embedded, and Embodied Interaction Conference (TEI) (2011, 2017--18); International Conference on Computational Creativity (2017); International Conference on Live Coding (ICLC) (2019); International Society for Music Information Retrieval Conference (2016); Sound and Music Computing (SMC) Conference (2010, 2012, 2016); International Conference of Live Interfaces (ICLI) (2016, 2020); Research in Equity and Sustained Participation in Engineering, Computing, and Technology (2015); CHI (2014); International Workshop on Content-Based Multimedia Indexing (2013); British Computer Society Human-Computer Interaction (2011--12); and International Computer Music Conference (2011).\\
 
@@ -119,7 +119,7 @@ I have been working for 10 years (2000--10) as interaction designer, web designe
 
 {\textbf{Conference Organizer}} for WAC (2019, general co-chair; 2017, session chair; 2016, music/artworks co-chair); NIME (2019, paper co-chair, session chair); ICLI (2020, conference local committee member); Computational Creativity (2017, local committee member).\\
 
-{\textbf{Interviews/Press Coverage}} in The Wire (2022); OnCurating.org (2020); Ballade.no (2019); Girls Geek Dinner Trondheim (2019); ACM Interactions (2018); Netlabel Interview Project (2018); and Wallifornia Music Tech (2018).\\
+{\textbf{Interviews/Press Coverage}} in PSF (2023); The Wire (2022); OnCurating.org (2020); Ballade.no (2019); Girls Geek Dinner Trondheim (2019); ACM Interactions (2018); Netlabel Interview Project (2018); and Wallifornia Music Tech (2018).\\
 
 {\textbf{Research Visits}} at Filmuniversität Babelsberg KONRAD WOLF (2018--2019); University of Strathclyde (2011--12); UPF (2011); and OU (2010).\\
 
