--- a/Xambo.CV.tex
+++ b/Xambo.CV.tex
@@ -217,6 +217,8 @@ Role: Creator \& Director.
 Funding body: AHRC. \\
 Project: "Sensing the Forest - Let the Forest Speak using the Internet of Things, Acoustic Ecology and Creative AI".\\
 Role: PI. \\
+Partners: Music, Technology and Innovation - Institute for Sonic Creativity (MTI$^2$), De Montfort University; Forest Research; Forestry England. \\
+%Collaborators: .\\
 Total Pound Amount: \pounds250,000 \\
 
 
@@ -358,7 +360,7 @@ Total Euro Amount: \euro3,000
 
 \subsection*{Peer-Reviewed Journal Articles}
 \noindent
-\years{2023}\textbf{Xambó, A.} (2023). Discovering Creative Commons Sounds in Live Coding. \emph{Organised Sound}, 28(2).\\
+\years{2023}\textbf{Xambó, A.} (2023). Discovering Creative Commons Sounds in Live Coding. \emph{Organised Sound}, 28(2): 276--289.\\
 {\years{2022}\textbf{Xambó, A.} (2022) ``Virtual Agents in Live Coding: A Review of past, present and future directions''. \emph{e-Contact!}, 21.1. Online journal.\\
 {\years{2021}Roma, G., \textbf{Xambó, A.}, Green, O., Tremblay, P.A. (2021) ``A General Framework for Visualization of Sound Collections in Musical Interfaces''. \emph{Applied Sciences}. 11(24):11926.\\
 {\years{2020}\textbf{Xambó, A.}, Støckert, R., Jensenius, A.R. and Saue, S. ``Learning to Code Through Web Audio: A Team-Based Learning Approach''. \emph{Journal of Audio Engineering Society}, 68(10), pp. 727--737. \emph{Special Issue on Web Audio}.}\\
@@ -454,7 +456,7 @@ Brandtsegg, Ø., \textbf{Xambó, A.}, Engum, T., Bergsland, A., Waadeland, C.H. 
 \subsection*{External}
 \noindent
 
-\years{2023c} \textsc{Keynote Speaker} (November 14, 2023). " From NIME to NISE: Rethinking the design and evaluation of musical interfaces". \emph{Audio Developer Conference 2023 (ADC23)}. London, UK.\\ 
+\years{2023c} \textsc{Keynote Speaker} (November 14, 2023). "From NIME to NISE: Rethinking the design and evaluation of musical interfaces". \emph{Audio Developer Conference 2023 (ADC23)}. London, UK.\\ 
 \years{2023b} \textsc{Invited Talk/Workshop (online)} (June 7, 2023). "About NIMEs, NIMEing and Speculative Futures". \emph{Creative Technologies II}. Creative Technologies Master's Program, Film Universität Babelsberg Konrad Wolf, Potsdam, Germany.\\ 
 \years{2023a} \textsc{Invited Talk/Workshop} (March 3, 2023). "About NIMEs, NIMEing and Speculative Futures". \emph{Introduction to Making Digital Music Instruments
 }. LEADD:NG, University of Nottingham, Nottingham, UK.\\ 
@@ -617,7 +619,7 @@ Practices of Music; New Technologies, Instruments and Agents}. Oodi, Helsinki, F
 \subsection*{Participation in Compilations}
 \noindent
 
-\years{Forthcoming}Anna Xambó. “mnnw (extract)" (3 min 56 sec) in \emph{LOLtrax001} [WAV/MP3 files]. LOL Editions. \\	
+\years{2023}Anna Xambó. “mnnw (extract)" (3 min 56 sec) in \emph{LOLtrax001} [Cassette]. LOL Editions. \\	
 \years{2023}Anna Xambó. “Kicks \& Cuts" (2 min 21 sec) in \emph{f:p podcast episode 128\_Ana Maria Romano G.} [Podcast]. female:pressure podcast. \\	
 \years{2020b}Anna Xambó. “Magnets" (4 min 21 sec) in \emph{Compassion Through Algorithms Vol. II} [WAV/MP3 files]. Sheffield: Light Entries. \\	
 \years{2020a}Anna Xambó. “Poème Symphonique For Tape Metronome: Variation I" (5 min 38 sec) in \emph{In Unison} [WAV/MP3 files]. Brussels: i.u. \\	
@@ -800,7 +802,7 @@ Collaborators: Urtzi Grau (curator), Ana Otero (artistic director).
 \subsection*{Graduate Courses}
 \noindent
 
-\years{10/2019}Course: \emph{MCT4000 Music Communication and Technology)} \# Students: $\sim$14. \\
+\years{10/2019}Course: \emph{MCT4000 Music Communication and Technology}. \# Students: $\sim$14. \\
 Master of Music, Communication and Technology (MCT), Norwegian University of Science and Technology (NTNU), Trondheim, Norway.\\ 
 Role: Coordination of a 15-credit course which includes 7 modules.\\
 \years{10/2019}Course: \emph{MCT4000 Human-Computer Interaction Lectures (2nd edition)} (8 h). \# Students: $\sim$14. \\
@@ -826,6 +828,12 @@ Role: Creation of syllabus, creation of content, instruction and assessment.
 \subsection*{Undergraduate Courses}
 \noindent
 
+\years{10/2023--12/2023}Course: \emph{MATT3000\_2324 Research Project} (10 h). \# Students: $\sim$25-30. \\
+De Montfort University, Leicester, UK.\\ 
+Role: Course leader, instruction, coordination and assessment.\\
+\years{10/2023--11/2023}Course: \emph{MTEC2001\_2324 Presentation \& Promotion (DIY instrument design specialisation)} (24h). \# Students: $\sim$7. \\
+De Montfort University, Leicester, UK.\\ 
+Role: Creation of content for lectures, labs, instruction and assessment.\\
 \years{05/2023--06/2023}Course: \emph{MTEC1005\_2223 Music Industry Practice} (42 h). \# Students: $\sim$15--20. \\
 De Montfort University, Leicester, UK.\\ 
 Role: Course leader, creation of content for lectures, instruction and assessment.\\
@@ -943,6 +951,7 @@ Role: Co-creation of syllabus, creation of content, instruction and assessment.%
 %\noindent
 
 \subsection*{PhD Students}
+%\years{10/2023--present}1st supervisor of Shuoyang Zheng. QMUL.\\
 \years{11/2022--present}2nd supervisor of Christopher Cousin. DMU.\\
 \years{08/2022--present}2nd supervisor of Sam Topley. DMU.\\
 \years{04/2022--present}2nd supervisor of Eva Kára. DMU.
@@ -993,6 +1002,7 @@ Role: Co-creation of syllabus, creation of content, instruction and assessment.%
 \subsection*{Blogging}
 \noindent
 
+\years{09/2023--present}\href{https://sensingtheforest.github.io}{Sensing the Forest}, the website and blog of the research project \emph{Sensing the Forest: Let the Forest Speak using the Internet of Things, Acoustic Ecology and Creative AI}. Creator, Coordinator and Author.\\ 
 \years{06/2020--2021}\href{https://mirlca.dmu.ac.uk}{MIRLCAuto}, the website and blog of the research project \emph{MIRLCAuto: A Virtual Agent for Music Information Retrieval in Live Coding}. Creator and Author.\\ 
 \years{09/2018--12/2019}\href{http://wonomute.github.io}{Women Nordic Music Technology}, the website and blog of the WoNoMute organization. Co-Creator and Coordinator.\\ 
 \years{08/2018--12/2019}\href{https://mct-master.github.io}{MCT master blog}, the blog of the MCT master. Co-Creator and Co-Coordinator.\\ 
@@ -1082,6 +1092,7 @@ Role: Co-creation of syllabus, creation of content, instruction and assessment.%
 \subsection*{Conference Programme Committee Member (Reviewer)}
 \noindent
 
+\years{2023c}\emph{Algorithmic Pattern Salon} (2023).\\ 
 \years{2023b}\emph{International Symposium on Computer Music Multidisciplinary Research} (2023).\\ 
 \years{2023a}\emph{International Conference on Live Coding (ICLC)} (2023).\\
 \years{2022}\emph{Music Heritage Knowledge Graphs (MHKG) (2022).}\\
@@ -1143,6 +1154,7 @@ Role: Co-creation of syllabus, creation of content, instruction and assessment.%
 \subsection*{Jury Member}
 \noindent
 
+\years{2023--2024}\emph{Generative Music Prize/Prix Musique Generative}, IRCAM Forum, Paris, France.\\
 \years{2021}\emph{Pamela Z Award for Innovation (NIME '21)}, NYU Shanghai, Shanghai, China.\\
 \years{2020}\emph{Pamela Z Award for Innovation (NIME '20)}, Royal Birmingham Conservatoire, Birmingham, UK.\\
 \years{2019}\emph{Pamela Z Award for Innovation (NIME '19)}, UFRGS, Porto Alegre, Brazil.\\
