--- a/Xambo.brief.CV.tex
+++ b/Xambo.brief.CV.tex
@@ -109,11 +109,11 @@ I have been working for 10 years (2000--10) as interaction designer, web designe
 
 {\textbf{Grants/Awards/Accolades}} from AHRC (2023--25); DMU Living in a Digital Society Spotlight (2022); DMU Future Research Leaders Programme (2021-22); HDI/EPSRC (2020--21); NTNU (2019, 2018--20); Sonic Arts Research Center (2018); NCWIT (2017); NSF AISL (2016); WiMIR (2016); OU (2010--13, 2010); Fund. Caixa de Sabadell (2003--04); and Generalitat de Catalunya (1998--99, 2001--02).\\
 
-{\textbf{Peer-Reviewed Journal Publications}} in Organised Sound (2023); MDPI (2021); Computer Music Journal (2019); Journal of Audio Engineering Society (2018, 2020); Interacting with Computers (2017); International Journal of Social Research Methodology (2017); Qualitative Research (2017); ACM Transactions on Computer-Human Interaction (2013); and Information Processing \& Management (2013).\\
+{\textbf{Peer-Reviewed Journal Publications}} in Digital Creativity (2023); Organised Sound (2023); MDPI (2021); Computer Music Journal (2019); Journal of Audio Engineering Society (2018, 2020); Interacting with Computers (2017); International Journal of Social Research Methodology (2017); Qualitative Research (2017); ACM Transactions on Computer-Human Interaction (2013); and Information Processing \& Management (2013).\\
 
 {\textbf{Conference and Festival Participation}} at New Interfaces for Musical Expression (NIME) (2008, 2011, 2014, 2017--22); Web Audio Conference (WAC) (2017--22); Audio Mostly (2010, 2017--18); Tangible, Embedded, and Embodied Interaction Conference (TEI) (2011, 2017--18); International Conference on Computational Creativity (2017); International Conference on Live Coding (ICLC) (2019); International Society for Music Information Retrieval Conference (2016); Sound and Music Computing (SMC) Conference (2010, 2012, 2016); International Conference of Live Interfaces (ICLI) (2016, 2020); Research in Equity and Sustained Participation in Engineering, Computing, and Technology (2015); CHI (2014); International Workshop on Content-Based Multimedia Indexing (2013); British Computer Society Human-Computer Interaction (2011--12); and International Computer Music Conference (2011).\\
 
-{\textbf{Invited Keynote Talks}} at WAC (2021); SMC (2020); Women in Sound Women on Sound (2016).\\
+{\textbf{Invited Keynote Talks}} at ADC (2023); WAC (2021); SMC (2020); Women in Sound Women on Sound (2016).\\
 
 {\textbf{Performances}} at +RAIN (2023); Cafe OTO (2022); British Science Festival (2022); BEAST (2022); EarTaxi (2021); Jefferson Park EXP (2021); Network Music Festival (2020); Eulerroom Equinox (2020); PACE/DMU (2020--21); ICLC (2019); Dokkhuset (2018); Sonic Arts Research Center (2018); Inter/sections (2018); WAC (2017--22); Cube Fest (2018); NIME (2017--18, 2021--22); TEI  (2018); Audio Mostly (2017); Root Signals Festival (2017); Freedonia (2017); Women in Sound Women on Sound (2016); Phonos (2013); Niu (2012); Mostra Sonora i Visual (2006); Minima Festival (2004); and Sonar Festival (2002).\\
 
@@ -123,7 +123,7 @@ I have been working for 10 years (2000--10) as interaction designer, web designe
 
 {\textbf{Research Visits}} at Filmuniversität Babelsberg KONRAD WOLF (2018--2019); University of Strathclyde (2011--12); UPF (2011); and OU (2010).\\
 
-{\textbf{Blog Coordinator}} at MIRLCAuto (2020--21); WoNoMute (2018--2019); AudioCommons (2017--18); Women in Music Tech (2016--17); Methodological Innovation in Digital Arts and Social Sciences (2013--14); postWIMP (2010--11); and streetTypes (2006--09).
+{\textbf{Blog Coordinator}} at Sensing the Forest (2023--); MIRLCAuto (2020--21); WoNoMute (2018--2019); AudioCommons (2017--18); Women in Music Tech (2016--17); Methodological Innovation in Digital Arts and Social Sciences (2013--14); postWIMP (2010--11); and streetTypes (2006--09).
 
 %\vspace{1cm}
 %\vfill{}
