--- a/Xambo.CV.tex
+++ b/Xambo.CV.tex
@@ -97,21 +97,18 @@ bookmarks, colorlinks, breaklinks,
 \begin{document}
 {\Huge Anna Xambó Sedó}\\[0.1cm]
 \textsc{BA, MA, MSc, PhD}\\[0.9cm]
-\emph{Senior Lecturer in Music and Audio Technology}\\
-Leicester Media School\\
-Faculty of Computing, Engineering and Media\\
-De Montfort University (DMU)\\
-Clephan Building \\
-De Montfort University\\
-Leicester LE1 9BH United Kingdom\\[.2cm]
+\emph{Senior Lecturer in Sound and Music Computing}\\
+Centre for Digital Music (C4DM)\\
+School of Electronic Engineering and Computer Science\\
+Queen Mary University of London (QMUL)\\
+London, United Kingdom\\[.2cm]
 %\textsc{phone}: \texttt{(+44) (0) 737-879-6645}\\
-\textsc{email}: \href{mailto:anna.xambo@dmu.ac.uk}{anna.xambo@dmu.ac.uk}\\
+\textsc{email}: \href{mailto:a.xambosedo@qmul.ac.uk}{a.xambosedo@qmul.ac.uk}\\
 \textsc{webpage}: \href{http://annaxambo.me/}{annaxambo.me}
 
 %%\hrule
 \section*{Current Academic Roles}
----\emph{Senior Lecturer in Music and Audio Technology}, Leicester Media School, Faculty of Computing, Engineering and Media, DMU, Leicester, UK.\\
----\emph{Member of Music, Technology and Innovation - Institute for Sonic Creativity (MTI${^2}$)}, Leicester Media School, Faculty of Computing, Engineering and Media, DMU, Leicester, UK.\\
+---\emph{Senior Lecturer in Sound and Music Computing}, C4DM,  Queen Mary University of London, UK.\\
 ---\emph{ Associate Fellow}, Higher Education Academy, United Kingdom.
 %%\hrule
 \section*{Areas of Interest}
@@ -158,14 +155,15 @@ Dissertation: \emph{Interfaces for Sketching Musical Compositions}.\\
 \section*{Teaching Education}
 \noindent
 \years{2020}\textsc{Research Supervision}. Instructors: Sally Ruane (module 1), Deborah Cartmell (module 2), Meera Warrier (module 3). DMU. Leicester, UK.\\
-\years{2018--2019}\textsc{Learning and Teaching in Higher Education} (with certificate). Instructors: Emma Kennedy (module 1), Alison Gilmour (module 2), Maren Thom (module 2). Queen Mary University of London (QMUL). London.\\
+\years{2018--2019}\textsc{Learning and Teaching in Higher Education} (with certificate). Instructors: Emma Kennedy (module 1), Alison Gilmour (module 2), Maren Thom (module 2). QMUL. London.\\
 \years{2018}\textsc{Women into Leadership}. Instructor: Lorraine Smith. QMUL. London.\\
 \years{2017}\textsc{Communication Skills for Teaching for International Faculty, Postdocs, and Visiting Scholars} (with certificate). Instructor: Katherine Samford. Georgia Institute of Technology (Georgia Tech). Atlanta, GA, USA.
 
 %%\hrule
 \section*{Employment}
 \noindent
-\years{01/2020--present}\textsc{Senior Lecturer in Music and Audio Technology}. Leicester Media School, Faculty of Computing, Engineering and Media, DMU. \\
+\years{01/2024--present}\textsc{Senior Lecturer in Sound and Music Computing}. C4DM, School of Electronic Engineering and Computer Science, QMUL. \\
+\years{01/2020--12/2023}\textsc{Senior Lecturer in Music and Audio Technology}. Leicester Media School, Faculty of Computing, Engineering and Media, DMU. \\
 \years{08/2018--12/2019}\textsc{Associate Professor in Music Technology}. Department of Music, Norwegian University of Science and Technology (NTNU). \\
 \years{08/2018--01/2019}\textsc{Visiting Lecturer}. C4DM, School of Electronic Engineering and Computer Science (EECS), QMUL. \\
 \years{10/2017--07/2018}\textsc{Postdoctoral Research Assistant}. C4DM, School of EECS, QMUL. \\
@@ -344,7 +342,7 @@ Total Euro Amount: \euro3,000
 \subsection*{Peer-Reviewed Books / Edited Books, Journal Special Issues, and Proceedings}
 \noindent
 
-\years{2023}\textbf{Xambó, A.}, Roma, G., Magnusson, T. (eds.) (2023). Live Coding Sonic Creativities. \emph{Organised Sound}, 28(2).\\
+\years{2023}\textbf{Xambó, A.}, Roma, G., Magnusson, T. (eds.) (2023). Live Coding Sonic Creativities (special issue). \emph{Organised Sound}, 28(2).\\
 \years{2020b}\textbf{Xambó, A.},  Martín, S. R., Roma, G. (eds.) (2020). JAES Special Issue on Web Audio. \emph{Journal of Audio Engineering Society}, 68(10).\\
 \years{2020a}\textbf{Xambó, A.},  Martín, S. R., Roma, G. (eds.) (2019). \emph{Proceedings of the International Web Audio Conference}. NTNU. ISSN: 2663-5844.\\
 \years{2019}Queiroz, M. \textbf{Xambó, A.} (eds.) (2019). \emph{Proceedings of the International Conference on New Interfaces for Musical Expression}. UFRGS. ISSN 2220-4806.\\
@@ -360,6 +358,7 @@ Total Euro Amount: \euro3,000
 
 \subsection*{Peer-Reviewed Journal Articles}
 \noindent
+\years{2024}Jawad, K., \textbf{Xambó, A.} (2024). Feminist HCI and Narratives of Design Semantics in DIY Music Hardware. \emph{Frontiers in Communication}, 8:1345124.\\
 \years{2023}\textbf{Xambó, A.} (2023). Discovering Creative Commons Sounds in Live Coding. \emph{Organised Sound}, 28(2): 276--289.\\
 {\years{2022}\textbf{Xambó, A.} (2022) ``Virtual Agents in Live Coding: A Review of past, present and future directions''. \emph{e-Contact!}, 21.1. Online journal.\\
 {\years{2021}Roma, G., \textbf{Xambó, A.}, Green, O., Tremblay, P.A. (2021) ``A General Framework for Visualization of Sound Collections in Musical Interfaces''. \emph{Applied Sciences}. 11(24):11926.\\
@@ -513,6 +512,8 @@ Practices of Music; New Technologies, Instruments and Agents}. Oodi, Helsinki, F
 \subsection*{Own Institution}
 \noindent
 
+\years{2023b} \textsc{Panel Member} together with Adewole, F., Ferril, S., Kasumovic, M. (November 29, 2023). “Practice Research Roundtable Discussion". Online panel discussion moderated by Alissa Clarke and Rosie Garton. DMU, Leicester, UK.\\
+\years{2023a} \textsc{Oral Presenter} together with Batchelor, P. (November 29, 2023). “The Sensing the Forest project". \emph{IOCT5007 Research Methods for Creative Projects}. DMU, Leicester, UK.\\
 \years{2022b} \textsc{Oral Presenter}. (December 7, 2022). “Music performance with crowdsourced sounds: collaboration by chance". \emph{MUST5001 Aesthetics and Ideas in the Sonic Arts}. DMU, Leicester, UK.\\
 \years{2022a} \textsc{Oral Presenter}. (June 8, 2022). “Future Research Leaders 2022 Showcase". DMU, Leicester, UK.\\
 \years{2021} \textsc{Oral Presenter}. (November 10, 2021). “Music performance with crowdsourced sounds: collaboration by chance". \emph{MUST5001 Aesthetics and Ideas in the Sonic Arts}. DMU, Leicester, UK.\\
@@ -657,6 +658,7 @@ Practices of Music; New Technologies, Instruments and Agents}. Oodi, Helsinki, F
 \subsection*{Solo Performances}
 \noindent
 
+\years{2023}\textbf{Xambó, A.} (November 30, 2023). ``(un)pack''. \emph{I2MT Inaugural Concert}, University of Nottingham, Nottingham, UK.\\ 
 \years{2023}\textbf{Xambó, A.} (June 14, 2023). ``Ceci n'est pas une usine''. \emph{+RAIN Film Fest}, Universitat Pompeu Fabra/Sonar+D, Barcelona, Spain.\\ 
 \years{2022e}\textbf{Xambó, A.} (November 27, 2022). A live coding session using MIRLCa at ``Performing Critical AI I: feedback, noise, corpus, code''. MusAI conference, Cafe OTO, London, UK.\\
 \years{2022d}\textbf{Xambó, A.} (September 16, 2022). ``When virtual meets reality''. \emph{British Science Festival}, LCB Depot, Leicester, UK.\\
